updated to include append service
Added append service, edits in evaluate to use graph reference from Node Dictionary, edits to Demo K-CHAIN notebook
