# kchain/swagger/kchain_app.yaml
@@ -1,15 +1,15 @@
 swagger: "2.0"
 info:
-  description: "Build and Execute K-CHAIN models"
+  description: "Build, Append, and Execute K-CHAIN Models"
   version: "1.0.0"
-  title: "K-CHAIN Model services"
+  title: "K-CHAIN Model Services"
 host: "localhost:12345"
 basePath: "/darpa/aske"
 tags:
-- name: "K-CHAIN Model services"
+- name: "K-CHAIN Model Services"
   externalDocs:
-    description: "Find out more"
-    url: "http://swagger.io"
+    description: "Part of GE DARPA ASKE program"
+    url: "https://github.com/GEGlobalResearch/DARPA-ASKE-TA1"
 
 paths:
   /kchain/build:
@@ -17,7 +17,7 @@ paths:
       tags:
       - "K-CHAIN"
       summary: "Builds a K-CHAIN model for given input and output variables "
-      operationId: "app.build"
+      operationId: "kchain_app.build"
       consumes:
       - application/json
       produces:
@@ -33,13 +33,35 @@ paths:
           description: "success"
           schema:
             $ref: "#/definitions/build_out"
+  
+  /kchain/append:
+    post:
+      tags:
+      - "K-CHAIN"
+      summary: "Appends a K-CHAIN submodel with given input and output variables to target K-CHAIN model"
+      operationId: "kchain_app.append"
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - in: "body"
+        name: "body"
+        required: true
+        schema:
+          $ref: "#/definitions/append_in"
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/append_out"
             
   /kchain/evaluate:
     post:
       tags:
       - "K-CHAIN"
       summary: "Runs a K-CHAIN model for given input variables and creates output values"
-      operationId: "app.evaluate"
+      operationId: "kchain_app.evaluate"
       consumes:
       - application/json
       produces:
@@ -93,6 +115,41 @@ definitions:
       metagraphLocation:
         type: "string"
   
+  append_in:
+    type: "object"
+    required:
+    - "inputVariables" 
+    - "outputVariables"
+    - "modelName"
+    properties:
+      inputVariables:
+        type: "array"
+        items: 
+          $ref: "#/definitions/variable"
+      outputVariables:
+        type: "array"
+        items: 
+          $ref: "#/definitions/variable"
+      dataLocation:
+        type: "string"
+      equationModel:
+        type: "string"
+      modelName:
+        type: "string"
+      targetModelName:
+        type: "string"
+  
+  append_out:
+    type: "object"
+    required:
+    - "modelType"
+    - "metagraphLocation"
+    properties:
+      modelType:
+        type: "string"
+      metagraphLocation:
+        type: "string"
+        
   evaluate_in:
     type: "object"
     required:
